<resources>
    <string name="app_name">AMST4</string>
    <string name="amst_grupo_04">AMST Grupo 04</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="menu_principal">Menu principal</string>
    <string name="control_de_sensores">CONTROL DE SENSORES</string>
    <string name="historial_de_pedidos">HISTORIAL DE PEDIDOS</string>
    <string name="base_privada">BASE PRIVADA</string>
    <string name="salir">SALIR</string>
</resources>